reafactor: fix logic in different services, update composition service with simple dto, and other changes